Link spacing fix
Added justify-content:space-between for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ body {
 @media screen and (max-width: 425px) {
   .description-links {
     font-size: 0.7em;
+    justify-content: space-between;
   }
 }
 .description-links li > a {
