--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -66,6 +66,7 @@
 
       @media screen and (max-width: 425px) {
         font-size: .7em;
+        justify-content: space-between;
       }
   
       li > a {
